src/test/ui/const-generics/const-expression-missing-braces.stderr
error: expected one of `!`, `(`, `,`, `>`, `?`, `for`, lifetime, or path, found `3`
  --> $DIR/const-expression-missing-braces.rs:8:17
   |
LL |     foo::<bar + 3>();
   |                 ^ expected one of 8 possible tokens

error: expected one of `,` or `>`, found `+`
  --> $DIR/const-expression-missing-braces.rs:18:13
   |
LL |     foo::<3 + 3>();
   |             ^ expected one of `,` or `>`

error: likely `const` expression parsed as trait bounds
  --> $DIR/const-expression-missing-braces.rs:13:11
   |
LL |     foo::<bar + bar>();
   |           ^^^^^^^^^ parsed as trait bounds but traits weren't found
   |
help: if you meant to write a `const` expression, surround the expression with braces
   |
LL |     foo::<{ bar + bar }>();
   |           ^           ^

error: aborting due to 3 previous errors

